[package]
name = "bt1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[workspace]
members = [
  "./exercises/basic-of-rust"
]

[[test]]
name = "conditions"
path = "./exercises/basic-of-rust/src/conditions.rs"

[[test]]
name = "strings"
path = "./exercises/basic-of-rust/src/strings.rs"

[[test]]
name = "functions"
path = "./exercises/basic-of-rust/src/functions.rs"

[dependencies]
